[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cisco-pyaci"
version = "1.0.0"
authors = [
  { name="Praveen Kumar", email="praveek6@cisco.com" },
  { name="Camillo Rossi", email="camrossi@cisco.com" },
]
description = "Python Bindings for Cisco ACI REST API"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'Flask<=3.0.3',
    'lxml',
    'paramiko',
    'pyopenssl==22.0.0',
    'cryptography==38.0.4',
    'parse',
    'pyyaml',
    'requests',
    'scp',
    'websocket-client',
    'xmltodict',
    'six'
]

[project.urls]
Homepage = "https://github.com/datacenter/pyaci"
Issues = "https://github.com/datacenter/pyaci/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
  "/examples",
  "/.circleci",
  "/.travis.yml",
  "/scripts",
  "/meta",
  "/Dockerfile",
]

[tool.hatch.build.targets.wheel]
packages = ["pyaci"]